[project]
name = "yaquod-agent"
version = "0.1.0"
description = "Yaquod (يقود) — voice AI agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "python-dotenv",
    "httpx2",
    "livekit-agents",
    "livekit-plugins-azure",
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "livekit-plugins-turn-detector",
    "llama-index",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.fastapi]
entrypoint = "routes.vehicle_api:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"agent.py" = ["E402"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent"]

[tool.setuptools.packages.find]
include = [
    "config",
    "config.*",
    "llm",
    "llm.*",
    "routes",
    "routes.*",
    "utils",
    "utils.*",
]